# mpi-matrix-mult

./: CMakeLists.txt  main.c
